Finished major details
