# controllers/clienteController.js
@@ -1,10 +1,28 @@
 const Cliente = require('../models/clientesHibituais');
+const Registo = require('../models/registosDosParques');
 
 const { catchAsync } = require('../util/catchAsync');
 
 exports.getAllClients = catchAsync(async (req, res, next) => {
   const clientes = await Cliente.find();
   res.status(200).json(clientes);
+});
+
+exports.getClient = catchAsync(async (req, res, next) => {
+  const cliente = await Cliente.findById(req.params.id);
+  res.status(200).json(cliente);
+});
+
+exports.findClient = catchAsync(async (req, res, next) => {
+  try {
+    setTimeout(async () => {
+      const cliente = await Cliente.findOne(req.body);
+      console.log('cliente, ', cliente);
+      res.status(200).json(cliente);
+    }, 500);
+  } catch (error) {
+    console.log(error);
+  }
 });
 
 exports.createNewClient = catchAsync(async (req, res, next) => {
@@ -27,5 +45,34 @@ exports.updateClient = catchAsync(async (req, res, next) => {
   client.matriculas = matriculas;
   client.saldoEmCartao = carregamento;
   const respSave = await client.save();
-  res.status(201).json(respSave);
+  res.status(200).json({
+    status: 200,
+    message: 'User updated!',
+    data: {
+      ...respSave._doc,
+    },
+  });
+});
+
+exports.clientHistory = catchAsync(async (req, res, next) => {
+  try {
+    const id = req.params.id;
+    const clientHistoryData = await Registo.find({ cliente: id })
+      .populate('parque', ['nome', 'precoPorHora'])
+      .populate('lugar', 'label')
+      .populate('pagamento', ['forma', 'valor']);
+    res.status(200).json({
+      status: 200,
+      message: 'User register history!',
+      data: clientHistoryData,
+    });
+  } catch (error) {
+    res.status(400).json({
+      status: 400,
+      message: 'Something went wrong!',
+      data: {
+        ...error,
+      },
+    });
+  }
 });
