# routes/clientesRoutes.js
@@ -6,6 +6,12 @@ const clienteController = require('../controllers/clienteController');
 
 router.get('/', clienteController.getAllClients);
 
+router.get('/find', clienteController.findClient);
+
+router.get('/:id', clienteController.getClient);
+
+router.get('/history/:id', clienteController.clientHistory);
+
 router.post('/', clienteController.createNewClient);
 
 router.put('/:id', clienteController.updateClient);
